<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <Spinner
            android:id="@+id/spinner_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/mode_pedometer"
            android:layout_gravity="center"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            style="@style/Base.Widget.AppCompat.DropDownItem.Spinner"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/layout_label_info"
                android:orientation="vertical"
                android:gravity="end"
                >
                <TextView
                    android:id="@+id/text_label_calorie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_calorie"
                    style="@android:style/TextAppearance.Medium"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    />
                <TextView
                    android:id="@+id/text_label_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_distance"
                    style="@android:style/TextAppearance.Medium"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    />
                <TextView
                    android:id="@+id/text_label_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_speed"
                    style="@android:style/TextAppearance.Medium"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    />
                <TextView
                    android:id="@+id/text_label_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_count"
                    style="@android:style/TextAppearance.Medium"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>
                <TextView
                    android:id="@+id/text_label_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_status"

                    style="@android:style/TextAppearance.Medium"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/layout_info"
                android:gravity="start"
                >
                <TextView
                    android:id="@+id/text_calorie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_calorie"
                    style="@android:style/TextAppearance.Medium"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    />
                <TextView
                    android:id="@+id/text_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_distance"
                    style="@android:style/TextAppearance.Medium"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"/>

                <TextView
                    android:id="@+id/text_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_speed"
                    style="@android:style/TextAppearance.Medium"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"/>
                <TextView
                    android:id="@+id/text_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_count"
                    style="@android:style/TextAppearance.Medium"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"/>
                <TextView
                    android:id="@+id/text_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_status"
                    style="@android:style/TextAppearance.Medium"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_gravity="center"
            />
    </LinearLayout>
</RelativeLayout>